# comfy-swap

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  README_CN.md  build.bat  go.mod  main.go
.cursor/rules/: code-standards.mdc
.github/workflows/: ci.yml  release.yml
cmd/: config.go  health.go  import.go  info.go  install_plugin.go  list.go  logs.go  plugin_status.go  result.go  root.go  run.go  serve.go  status.go  stop.go  upgrade.go  version.go  workflow.go
docs/: SKILL_PUBLISHING.md
internal/assets/: assets.go
internal/assets/ComfyUI-ComfySwap/: .gitignore  README.md  __init__.py  pyproject.toml
internal/assets/ComfyUI-ComfySwap/js/: comfy-swap.js
internal/assets/web/: app.js  index.html  style.css
internal/client/: client.go
internal/config/: config.go
internal/logs/: logs.go
internal/plugin/: installer.go
internal/proxy/: proxy.go
internal/server/: server.go  server_test.go
internal/upgrade/: upgrade.go
internal/workflow/: manager.go  manager_test.go  models.go
scripts/: release.ps1  release.sh
skills/comfy-swap/: README.md  plugin.json
skills/comfyswap/: SKILL.md
