[project]
name = "comfyui-comfyswap"
version = "1.0.0"
description = "ComfyUI extension for Comfy-Swap workflow synchronization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Comfy-Swap Contributors"}
]
keywords = ["comfyui", "workflow", "api", "comfy-swap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/kamjin3086/ComfyUI-ComfySwap"
Repository = "https://github.com/kamjin3086/ComfyUI-ComfySwap"
Issues = "https://github.com/kamjin3086/ComfyUI-ComfySwap/issues"

[tool.setuptools]
packages = ["comfyui_comfyswap"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
